examples/bad/tuple-with-void.elina
fn main(): void {
  var tupleWithVoid: tuple<string, tuple<tuple<int, tuple<bool, void>>>>;
}